[gd_scene load_steps=5 format=2]

[ext_resource path="res://resources/fontness10.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/interface/Victory.gd" type="Script" id=2]
[ext_resource path="res://resources/fontness31.tres" type="DynamicFont" id=7]
[ext_resource path="res://scenes/interface/NButton.tscn" type="PackedScene" id=8]

[node name="Victory" type="Control"]
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 480.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 480.0
margin_bottom = 65.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.784314, 0.431373, 0.627451, 1 )
text = "VITORY"
align = 1
valign = 1

[node name="VBScore" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 69.0
margin_right = 480.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="HBHScore" type="HBoxContainer" parent="VBoxContainer/VBScore"]
margin_right = 480.0
margin_bottom = 63.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/VBScore/HBHScore"]
margin_right = 157.0
margin_bottom = 63.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.431373, 0.431373, 0.627451, 1 )
text = "HIGH SCORE"
align = 2
valign = 1

[node name="Space" type="Label" parent="VBoxContainer/VBScore/HBHScore"]
margin_left = 161.0
margin_right = 318.0
margin_bottom = 63.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.431373, 0.431373, 0.627451, 1 )
text = "-"
align = 1
valign = 1

[node name="LHScore" type="Label" parent="VBoxContainer/VBScore/HBHScore"]
margin_left = 322.0
margin_right = 480.0
margin_bottom = 63.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.784314, 0.431373, 0.627451, 1 )
text = "HIGH SCORE"
valign = 1

[node name="HBScore" type="HBoxContainer" parent="VBoxContainer/VBScore"]
margin_top = 67.0
margin_right = 480.0
margin_bottom = 131.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/VBScore/HBScore"]
margin_right = 157.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.431373, 0.431373, 0.627451, 1 )
text = "SCORE"
align = 2
valign = 1

[node name="Space" type="Label" parent="VBoxContainer/VBScore/HBScore"]
margin_left = 161.0
margin_right = 318.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.431373, 0.431373, 0.627451, 1 )
text = "-"
align = 1
valign = 1

[node name="LScore" type="Label" parent="VBoxContainer/VBScore/HBScore"]
margin_left = 322.0
margin_right = 480.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.784314, 0.431373, 0.627451, 1 )
text = "SCORE"
valign = 1

[node name="VBButtons" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 204.0
margin_right = 480.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Menu" parent="VBoxContainer/VBButtons" instance=ExtResource( 8 )]
margin_top = 19.0
margin_bottom = 31.0
size_flags_vertical = 4
custom_colors/font_color_disabled = Color( 0.431373, 0.431373, 0.627451, 1 )
custom_colors/font_color_hover = Color( 0.784314, 0.431373, 0.627451, 1 )
text = "Menu"
scene = "res://scenes/interface/Menu.tscn"

[node name="Quit" parent="VBoxContainer/VBButtons" instance=ExtResource( 8 )]
margin_top = 35.0
margin_bottom = 47.0
size_flags_vertical = 4
text = "Quit"
[connection signal="tree_entered" from="." to="." method="on_victory_tree_entered"]
[connection signal="send_scene" from="VBoxContainer/VBButtons/Menu" to="." method="on_menu_send_scene"]
[connection signal="send_scene" from="VBoxContainer/VBButtons/Quit" to="." method="on_quit_send_scene"]
